# backend/routes/api/MaintenanceRoutes.php
@@ -9,4 +9,5 @@ Route::prefix('/jwt/maintenance')->middleware('auth:api')->group(function () {
     Route::post('/create', [MaintenanceController::class, 'store']);
     Route::get('/update/current-client', [MaintenanceController::class, 'updateCurrentClient']);
     Route::get('/calendar', [MaintenanceController::class, 'index']);
+    Route::get('/historical', [MaintenanceController::class, 'getHistorical']);
 });
